# plato5

./: .editorconfig  Pipfile  README.md  poetry.toml  pyproject.toml
src/: __init__.py  gl.py  poly.py  qt.py  say.py
