[tool.poetry]
name = "plato5"
version = "0.1.0"
description = "Fiddle with regular polyhedrons"
authors = ["Stas Ukolov <ukoloff@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
